k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: python.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-python
            port:
              number: 5001
  - host: go.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-go
            port:
              number: 5002
